# assignemt1

./: README.md
assigment1/: CMakeLists.txt  client.java
assigment1/apps/: server.c
assigment1/src/: lines.c
sockets/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  manifest.mf  server  test
sockets/apps/: client.c  client.java  server.c
